--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <section>
         <h2>🛠 Projects</h2>
         <ul>
-            <li><strong>Project 1</strong>: Engineering Exploration- Electronic components cutting bot.</li>
-            <li><strong>Project 2</strong>: DTSI- Smart gloves for deaf and dumb.</li>
+            <li><strong>Project 1</strong>: Engineering Exploration- Mechanism Bot.</li>
+            <li><strong>Project 2</strong>: DTSI- Universal port for EV's.</li>
         </ul>
 
         <h2>🚀 Skills</h2>
